- [nvr_core] Update swagger docs.
